[tool.poetry]
name = "seven"
version = "0.1.0"
description = ""
authors = ["Felix Du <felix.du@nokia-sbell.com>"]

[tool.poetry.dependencies]
python = "^3.10"
altair = "^4.2.0"
streamlit = "^1.11.0"
openpyxl = "^3.0.10"
XlsxWriter = "^3.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
